# MicroC

./: README.md  create_result.sh  test_helper.py
lib/: ast.ml  codegen.ml  codegen.mli  dune  linker.ml  linker.mli  location.ml  location.mli  parser.messages  parser.mly  parsing.ml  parsing.mli  scanner.mll  semantic_analysis.ml  semantic_analysis.mli  symbol_table.ml  symbol_table.mli
test/: codegen_test.ml  dune  parser_test.ml  semant_test.ml
test/samples/: fail-assign7.mc  fail-assign8.mc  fail-bitwise1.mc  fail-dead3.mc  fail-dead4.mc  fail-struct1.mc  test-abbrop1.mc  test-abbrop2.mc  test-abbropbin1.mc  test-assignarr1.mc  test-bitwise1.mc  test-bitwise2.mc  test-bitwise2.out  test-comma1.mc  test-comma2.mc  test-comma2.out  test-comma3.mc  test-comma3.out  test-decwithinit1.mc  test-decwithinit2.mc  test-decwithinit3.mc  test-dowhile1.mc  test-floatop1.mc  test-floatop1.out  test-forinit1.mc  test-multidec1.mc  test-multidec2.mc  test-multidim1.mc  test-multidim2.mc  test-multidim3.mc  test-multiforinit1.mc  test-null1.mc  test-null2.mc  test-null3.mc  test-null4.mc  test-null5.mc  test-postdecr1.mc  test-postincr1.mc  test-predecr1.mc  test-predecr2.mc  (+11 more)
test/samples/fail-separatecomp1/: f1.mc  f2.mc
test/samples/fail-separatecomp2/: f1.mc
test/samples/test-separatecomp1/: f1.mc  f2.mc
test/samples/test-separatecomp2/: f1.mc  f2.mc
test/samples/test-separatecomp3/: f1.mc  f2.mc  f3.mc
